--- a/scss_files/_base.scss
+++ b/scss_files/_base.scss
@@ -47,6 +47,7 @@ body {
 
             .btn {
                 background-color: $accent;
+                font-family: 'Ubuntu', sans-serif;
                 color: white;
                 padding: $base_padding;
                 border: none;
