--- a/scss_files/_variables.scss
+++ b/scss_files/_variables.scss
@@ -3,6 +3,7 @@ $primary_color: #102B3C;
 $secondary_color_dark: #205375;
 $secondary_color_light: #F0EFEF;
 $accent: #ED1C24;
+$accent_dark: #c20a10;
 
 //Regular Fonts
 @font-face { 
