Fix size mobile

--- a/css/main.css
+++ b/css/main.css
@@ -114,11 +114,30 @@ footer .footer-content .third-footer img {
   height: 14vh;
 }
 
+@media screen and (max-width: 800px) {
+  body {
+    display: flex;
+    flex-direction: column;
+    min-height: 100vh;
+  }
+  .main-content {
+    flex: 1;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+  }
+  footer {
+    flex-shrink: 0;
+  }
+}
 @media screen and (max-width: 768px) {
   body {
     min-height: 100vh;
     background-size: cover;
     background-position: center;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
   }
   .logo {
     margin-left: 15px;
@@ -130,6 +149,11 @@ footer .footer-content .third-footer img {
   }
   .main-content {
     margin: 10px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    flex: 1;
   }
   .main-content .content {
     flex-direction: column;
@@ -161,6 +185,7 @@ footer .footer-content .third-footer img {
   }
   footer {
     margin-top: 20px;
+    align-self: flex-end;
   }
   footer .footer-content .first-footer,
   footer .footer-content .second-footer {
